src/api/dcps/common/include/cmn_qosProvider.h

#define OS_API OS_API_EXPORT
#define OS_API OS_API_IMPORT
typedef enum {
    QP_RESULT_OK,
    QP_RESULT_NO_DATA,
    QP_RESULT_OUT_OF_MEMORY,
    QP_RESULT_PARSE_ERROR,
    QP_RESULT_ILL_PARAM,
    QP_RESULT_UNKNOWN_ELEMENT,
    QP_RESULT_UNEXPECTED_ELEMENT,
    QP_RESULT_UNKNOWN_ARGUMENT,
    QP_RESULT_ILLEGAL_VALUE,
    QP_RESULT_NOT_IMPLEMENTED
} cmn_qpResult;
OS_API cmn_qosProvider
cmn_qosProviderNew (
        const c_char *uri,
        const c_char *profile,
        const C_STRUCT(cmn_qosProviderInputAttr) *attr);
OS_API void
cmn_qosProviderFree(
        cmn_qosProvider _this);
OS_API cmn_qpResult
cmn_qosProviderGetParticipantQos(
        cmn_qosProvider _this,
        const c_char *id,
        c_voidp qos)
    __attribute__((nonnull(1,3)));
OS_API cmn_qpResult
cmn_qosProviderGetTopicQos(
        cmn_qosProvider _this,
        const c_char *id,
        c_voidp qos)
    __attribute__((nonnull(1,3)));
OS_API cmn_qpResult
cmn_qosProviderGetPublisherQos(
        cmn_qosProvider _this,
        const c_char *id,
        c_voidp qos)
    __attribute__((nonnull(1,3)));
OS_API cmn_qpResult
cmn_qosProviderGetDataWriterQos(
        cmn_qosProvider _this,
        const c_char *id,
        c_voidp qos)
    __attribute__((nonnull(1,3)));
OS_API cmn_qpResult
cmn_qosProviderGetSubscriberQos(
        cmn_qosProvider _this,
        const c_char *id,
        c_voidp qos)
    __attribute__((nonnull(1,3)));
OS_API cmn_qpResult
cmn_qosProviderGetDataReaderQos(
        cmn_qosProvider _this,
        const c_char *id,
        c_voidp qos)
    __attribute__((nonnull(1,3)));